# Echokrautts

./: .gitlab-ci.yml  F5-TTS-Wrapper-SPEC.md  README.md  THIRD_PARTY_LICENSES.md  start-f5tts.bat  start-f5tts.sh  start-xtts.bat  start-xtts.sh  start.bat  start.sh
wrapper/: .gitignore  README.md  config.json  conftest.py  pyproject.toml
wrapper/bootstrap/: bootstrap.py  install_linux.sh  install_win.ps1
wrapper/src/: __init__.py  config.py  engine.py  gpu_detect.py  jobs.py  models.py  ndjson.py  procutil.py  progress.py  samples.py  server.py  streaming.py  xtts_backend.py
wrapper/tests/: test_config.py  test_engine.py  test_gpu_detect.py  test_jobs.py  test_models.py  test_ndjson.py  test_progress.py  test_samples.py  test_server.py  test_streaming.py  test_xtts_backend.py
